# camera_demo

./: CMakeLists.txt  build.sh
camera_show/: camera_show.cpp  camera_show.h  camera_show.qrc  camera_show.ui  main.cpp
cfg/: 264.sdp  fservo.cfg  test.sdp  url - ¸±±¾.txt  url.txt  yolov3.cfg
rtp_netplay/: byteArray.cpp  byteArray.h  config.h  ffmpegdecoder.cpp  ffmpegdecoder.h  instance.cpp  instance.h  log.h  netcontrol.cpp  netcontrol.h  param.h  receivemodel.h  rtp_netplay.cpp  rtp_netplay.h  rtpdatamanager.cpp  rtpdatamanager.h  rtpdatamodel.h  rtpmodel.h  semaphore.cpp  semaphore.h  socketbase.cpp  socketbase.h
